--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="clock"
             type="models.Clock" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -19,12 +19,14 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:textAlignment="center"
                 android:text="@{clock.Now}"
-                android:textSize="50sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_marginTop="100dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal" />
 
             <Button
                 android:onClick="@{()->clock.update()}"
@@ -46,6 +48,11 @@
                     android:layout_height="wrap_content"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <Button
+                android:onClick="onNextPageBtnClicked"
+                android:text="@string/NextPageButtonText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
